--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,32 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>{% block title %}{% endblock %} - Travelity</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="/static/main.css">
+  <head>
+    <title>{% block title %}{% endblock %}</title>
+    <meta charset="UTF-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/main.css">
+
+    <!-- {% block styles %}{% endblock %} -->
+  </head>
+
+  <body>
+  
+    <header>
+      <!-- <div id="header-object1"> -->
+          <img id="logo" src="/static/images/logo.png">  
+      <!-- </div> -->
+      <div id="header-object2">
+          <h2>The Eat Project</h2>
+      </div>
+    </header>
+
+    
+    
+  	
+<!--       {% if not session.logged_in %}
+        <a href="{{ url_for('login') }}">log in</a>
+      {% else %}
+        <a href="{{ url_for('logout') }}">log out</a>
+      {% endif %} -->
+    
 
 
-
-		{% block styles %}{% endblock %}
-	</head>
-
-	<body>
-
-		<header>
-			
-			<div id="site-title-wrapper">
-				<h1 id="site-title">TRAVELITY </h1> 
-			</div>
-			{% block header %}{% endblock %} 
-
-		</header>
-		<div id="content">{% block content %}{% endblock %}</div>
-		<!-- <footer>Copyright </footer> -->
+    {% block content %}{% endblock %}
 
 
-
-		<script type="text/javascript" src="{{ url_for('static', filename='interactions.js') }}"></script>
-	</body>
+  <footer>
+    <h5>Copyright placeholder</h5>
+  </footer>
+  </body>
 </html>
