--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,27 +1,24 @@
-<!-- DELETE THIS PART FOR NUM. 2 -->
 {% extends "base.html" %}
-<!-- DELETE THIS PART FOR NUM. 2 -->
 
 {% block title %}
-	Login
+	EatProject:Login
 {% endblock %}
 
-<!-- DELETE THIS PART FOR NUM. 2 -->
+
 {% block content %}
-<!-- DELETE THIS PART FOR NUM. 2 -->
-	<h1><br>Hi there! Welcome to Travelity, the leading trip planning site</h1><br><br>
-	<div class="main-container">
-		<form action="login" method='post'>
-		<!-- DELETE THIS PART FOR NUM. 2 -->
-			<label>What's your name?<br>
-			<input type="text" name="username"></label><br><br>
-			<label>How about your email?<br>
-			<input type="text" name="email"></label>
-			<br><br>
-			<input class="action-button" id="login" type="submit" value="Submit">
-		</form>
-	</div>
+	
+	  <!-- {% if error %}<p class="error">Error: {{ error }}{% endif %} -->
 
-<!-- DELETE THIS PART FOR NUM. 2 -->
+	  <form id="login-form" action="{{ url_for('login') }}" method="POST">
+	    <dl>
+	      <dt>Username
+	      <dd><input type="text" name="username">
+	      <dt>Password
+	      <dd><input type="password" name="password">
+	      <dd><input id="submit-button" type="submit" value="Login">
+	    </dl>
+	    Don't have an account? <a href="{{ url_for('signup') }}">Create One</a>
+
+	  </form>
+	
 {% endblock %}
-<!-- DELETE THIS PART FOR NUM. 2 -->
