--- a/app/templates/page_not_found.html
+++ b/app/templates/page_not_found.html
@@ -7,7 +7,7 @@
 
 
 {% block content %}
-	<h1>Oh, Pooh Bear! You're stuck because we don't have that page for you.</h1>
+	<h1>Not authorized</h1>
 	<img src="http://a.dilcdn.com/bl/wp-content/uploads/sites/2/2013/08/winnie-the-pooh-stuck-in-rabbits-house.jpg">
 	<br>
 	<a class="action-button" id="goHome" href="/">Go back!</a>
