--- a/app/static/main.css
+++ b/app/static/main.css
@@ -7,6 +7,7 @@ html {
 
 body {
   margin: 0;
+  height: 100%;
 }
 
 footer {
@@ -16,7 +17,6 @@ footer {
   width: 100%; 
   height: 6%; 
   background-color: black;
-  /*padding: 1%;*/
 }
 
 header {
@@ -34,18 +34,23 @@ header {
   margin-right: 3%;
 }
 
-
-
 input{
   width: 30%;
   padding: 10px 15px;
   margin: 8px 0;
-  box-sizing: border-box;
+  /*box-sizing: border-box;*/
   font-size: 20px;
-  background-color: #fff6e0;
+  background-color: transparent;
+  border: 0;
+  border-bottom: 2px solid #656668;
+  text-align: center;
 }
 
-#submit-button {
+/*input:focus {
+  border-color: #4d90fe;
+}
+*/
+.submit-button {
   background-color:#ffb889;
   width: 10%;
   color: black;
@@ -77,7 +82,7 @@ input{
 }
 
 select {
-  border: 1px solid #ccc;
+  border: 1px solid #656668;
   font-size: 16px;
   height: 45px;
   width: 30%;
@@ -86,6 +91,11 @@ select {
 form {
   text-align: center;
   margin-top: 2.5%;
+}
+
+.logout-form {
+   text-align:right; 
+   margin-right:2%;
 }
 
 #signup-form{
@@ -100,14 +110,10 @@ a {
   text-decoration: none;
 }
 
-/*HOME PAGE*/
-#placeholder-img {
-  width: 50%;
-  margin-right: 25%;
-  margin-left: 25%;
-  /*margin-top: 2%;*/
-  margin-bottom: 4%;
-}
+/*#map {
+  margin-left: 15%;
+  position: static !important;
+}*/
 
 table {
   text-align: center;
