--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,53 +1,124 @@
-{% extends "base.html" %}
+<html>
+  <head>
+    <title>Eat Project:Home</title>
+    <meta charset="UTF-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+   <script type="text/javascript" src="/static/interactions.js"></script>
 
-{% block title %}
-  EatProject:Home
-{% endblock %}
+   <!-- STYLING HERE BECAUSE GOOGLE MAPS BREAKS IF LINKED TO A CSS FILE -->
+   <style>
+   		html, body {
+   			height: 100%;
+   			padding: 0;
+   			margin: 0;
+		  }
+      h3{
+        text-align: center;
+      }
+   		#map {
+   			height: 70%;
+   			width: 70%;
+   			margin-right: 15%;
+   			margin-left: 15%;
+        box-shadow: 0px 0px 5px #888888;
+   		}
+   		header {
+		    display: -webkit-flex;
+			  align-items: center;
+			  -webkit-align-items: center;   /*Safari*/
+			  background-color: black;
+			  color: #f9f2e5;
+			  box-shadow: 0px 0px 20px #888888;
+   		}
+		  #logo {
+ 			width: 4%;
+  			margin: 1%;
+  			margin-right: 3%;
+		  }
+		  footer {
+		  	color: #f9f2e5;
+		  	position: fixed; 
+		  	bottom: 0px; 
+		  	width: 100%; 
+		  	height: 6%; 
+		  	background-color: black;
+		  }
+      .controls {
+      margin-top: 10px;
+      border: 1px solid transparent;
+      border-radius: 2px 0 0 2px;
+      box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      height: 32px;
+      outline: none;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+      }
+      #pac-input {
+        background-color: #fff;
+        font-family: Roboto;
+        font-size: 15px;
+        font-weight: 300;
+        margin-left: 12px;
+        padding: 0 11px 0 13px;
+        text-overflow: ellipsis;
+        width: 300px;
+      }
+      #pac-input:focus {
+        border-color: #4d90fe;
+      }
+      .pac-container {
+        font-family: Roboto;
+      }
+      #type-selector {
+        color: #fff;
+        background-color: #4d90fe;
+        padding: 5px 11px 0px 11px;
+      }
+      #type-selector label {
+        font-family: Roboto;
+        font-size: 13px;
+        font-weight: 300;
+      }
+      #target {
+        width: 345px;
+      }
+   	</style>
+  	</head>
 
 
-{% block content %}
+  	<body>
 
-<section id="google-map">
-	<h3>Click on a pin on the map below to see product details</h3>
-	<img id="placeholder-img" src="/static/images/map.png">
+<!-- HEADER -->
+    <header>
+      <img id="logo" src="/static/images/logo.png">  
+      <div id="header-object2">
+          <h2>The Eat Project</h2>
+      </div>
+    </header>
 
-</section>
-
-
-<table>
-	<tr>
-		<td class="seller-pic"><img src="/static/images/foodpic2.jpg" style="width:50%;"></td>
-		<td class="food-info">FOOD NAME + DESCRIPTION</td>
-		<td class="seller-info">SELLER CONTACT INFO</td>
-	</tr>
-	<tr>
-		<td class="seller-pic"><img src="/static/images/foodpic2.jpg" style="width:50%;">
-		<td class="food-info">FOOD NAME + DESCRIPTION</td>
-		<td class="seller-info">SELLER CONTACT INFO</td>
-	</tr>
-	<tr>
-		<td class="seller-pic"><img src="/static/images/foodpic2.jpg" style="width:50%;">
-		<td class="food-info">FOOD NAME + DESCRIPTION</td>
-		<td class="seller-info">SELLER CONTACT INFO</td>
-	</tr>
-	<tr>
-		<td class="seller-pic"><img src="/static/images/foodpic2.jpg" style="width:50%;">
-		<td class="food-info">FOOD NAME + DESCRIPTION</td>
-		<td class="seller-info">SELLER CONTACT INFO</td>
-	</tr>
-	<tr>
-		<td class="seller-pic"><img src="/static/images/foodpic2.jpg" style="width:50%;">
-		<td class="food-info">FOOD NAME + DESCRIPTION</td>
-		<td class="seller-info">SELLER CONTACT INFO</td>
-	</tr>
+  <form action="logout" id="logout-form" style="text-align:right; margin-right:2%">
+    <br>Logged in as {{ name }}
+    <input class="logout-button" id="logout-button" type="submit" value="Logout">
+  </form>
 
 
-
-</table>
-
-
-
+	<h3>Enter your location to see available offerings near you. The map may took a moment to load</h3>
+  <input id="pac-input" class="controls" type="text" placeholder="Enter search location">
+	<div id="map"></div>
 
 
-{% endblock %}
+<!-- GOOGLE MAPS API SCRIPT WITH KEY -->
+	<!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxnXLF77Tj2wHcTj437zdcRL73UvBcvig&v=3&callback=initMap">
+   </script> -->
+
+
+    	
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxnXLF77Tj2wHcTj437zdcRL73UvBcvig&libraries=places&callback=initAutocomplete"
+         async defer></script>
+
+<!-- 		<footer>
+		  <h5>Copyright placeholder</h5>
+		</footer> -->
+	</body>
+</html>
 
