--- a/app/static/main.css
+++ b/app/static/main.css
@@ -12,10 +12,10 @@ body {
 
 footer {
   color: #f9f2e5;
-  position: fixed; 
-  bottom: 0px; 
-  width: 100%; 
-  height: 6%; 
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  height: 6%;
   background-color: black;
 }
 
@@ -50,9 +50,9 @@ input{
   border-color: #4d90fe;
 }
 */
-.submit-button {
-  background-color:#ffb889;
-  width: 10%;
+.submit-button, #signup, #add_item {
+  background-color:#cef442;
+  /*width: 10%;*/
   color: black;
   -moz-border-radius:8px;
   -webkit-border-radius:8px;
@@ -68,7 +68,7 @@ input{
   text-decoration: none;
 }
 #submit-button2 {
-  background-color:#ffb889;
+  background-color:#cef442;
   width: 15%;
   color: black;
   -moz-border-radius:8px;
@@ -94,7 +94,7 @@ form {
 }
 
 .logout-form {
-   text-align:right; 
+   text-align:right;
    margin-right:2%;
 }
 
@@ -108,6 +108,8 @@ h2, h3, h5 {
 
 a {
   text-decoration: none;
+  color: #f9f2e5;
+  font-family: Optima;
 }
 
 /*#map {
