--- a/app/templates/seller_profile.html
+++ b/app/templates/seller_profile.html
@@ -21,7 +21,7 @@
    <tr>
      <td>{{ item['food_name'] }}</td>
      <td>{{ item['cuisine_type'] }}</td>
-     <td> <button class="remove_tr" id= {{food['id']}}> Remove Offering </button> </td>
+     <td> <button class="remove_tr" id= {{item['food_id']}}> Remove Offering </button> </td>
    </tr>
  {% endfor %}
 </table>
